Implement firmware
